--- a/intellihub.html
+++ b/intellihub.html
@@ -500,6 +500,9 @@
                                 <a href="intellihub.html" class="animated-button">Intellihub<span></span></a>
                             </li>
                             <li class="nav-item">
+                                <a href="GSOCMetrics.html" class="animated-button">GSOC Metrics<span></span></a>
+                            </li>
+                            <li class="nav-item">
                                 <a href="RSSFeeds.html" class="animated-button">News Corp GSOC Intelifeed<span></span></a>
                             </li>
                             <li class="nav-item dropdown">
