--- a/GSOCMetrics.html
+++ b/GSOCMetrics.html
@@ -380,7 +380,12 @@
 
                 <main class="primary fade">
                   <div class="main-content" style="max-width: 60vw; margin: 0 auto;">
-                    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQO3p9opZ9kUxA2w3vHf1D6Hj1TBjjhf__2ZlZ7cdt0OxymEUguHsMi8rjsAUcAbe4zIbibaK_RZO3m/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                    <iframe 
+                        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQO3p9opZ9kUxA2w3vHf1D6Hj1TBjjhf__2ZlZ7cdt0OxymEUguHsMi8rjsAUcAbe4zIbibaK_RZO3m/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" 
+                        width="800" 
+                        height="1000" 
+                        style="border: 5px solid black;">
+                    </iframe>
                   </div>
                 </main>
               </div>
