--- a/google-earth-assets-map.html
+++ b/google-earth-assets-map.html
@@ -83,10 +83,19 @@
                     <div class="navbar-buttons">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="page1.html" class="animated-button">GSOC Phone Log Form<span></span></a>
+                                <a href="intellihubinputs.html" class="animated-button">Intellihub Inputs<span></span></a>
                             </li>
                             <li class="nav-item">
-                                <a href="RSSFeeds.html" class="animated-button">LNews Corp GSOC Intelifeed<span></span></a>
+                                <a href="intellihub.html" class="animated-button">Intellihub<span></span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="GSOCMetrics.html" class="animated-button">GSOC Metrics<span></span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="GSOCProtestTracking.html" class="animated-button">GSOC Protest Tracking<span></span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="RSSFeeds.html" class="animated-button">News Corp GSOC Intelifeed<span></span></a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="animated-button dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">
