--- a/intellihub.html
+++ b/intellihub.html
@@ -503,6 +503,9 @@
                                 <a href="GSOCMetrics.html" class="animated-button">GSOC Metrics<span></span></a>
                             </li>
                             <li class="nav-item">
+                                <a href="GSOCProtestTracking.html" class="animated-button">GSOC Protest Tracking<span></span></a>
+                            </li>
+                            <li class="nav-item">
                                 <a href="RSSFeeds.html" class="animated-button">News Corp GSOC Intelifeed<span></span></a>
                             </li>
                             <li class="nav-item dropdown">
