--- a/reliabilitymetrics.html
+++ b/reliabilitymetrics.html
@@ -111,7 +111,10 @@
                                 <a href="intellihub.html" class="animated-button">Intellihub<span></span></a>
                             </li>
                             <li class="nav-item">
-                                <a href="page1.html" class="animated-button">GSOC Phone Log Form<span></span></a>
+                                <a href="GSOCMetrics.html" class="animated-button">GSOC Metrics<span></span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="GSOCProtestTracking.html" class="animated-button">GSOC Protest Tracking<span></span></a>
                             </li>
                             <li class="nav-item">
                                 <a href="RSSFeeds.html" class="animated-button">News Corp GSOC Intelifeed<span></span></a>
