--- a/ukraine-conflict-map.html
+++ b/ukraine-conflict-map.html
@@ -94,7 +94,16 @@
                     <div class="navbar-buttons">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="page1.html" class="animated-button">GSOC Phone Log Form<span></span></a>
+                                <a href="intellihubinputs.html" class="animated-button">Intellihub Inputs<span></span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="intellihub.html" class="animated-button">Intellihub<span></span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="GSOCMetrics.html" class="animated-button">GSOC Metrics<span></span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="GSOCProtestTracking.html" class="animated-button">GSOC Protest Tracking<span></span></a>
                             </li>
                             <li class="nav-item">
                                 <a href="RSSFeeds.html" class="animated-button">News Corp GSOC Intelifeed<span></span></a>
